@@ -1,5 +1,9 @@
 2002-10-27  Vino Crescini  <jcrescin@cit.uws.edu.au>
 
+	* common/epilog.h :
+
+	  - Added malloc macros.
+
 	* exp/comp_atom.c : 
 	* exp/comp_exp.c :
 	* exp/comp_exp.h :
